--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1104,7 +1104,7 @@ I {
 }
 .extra_btn {
     @include flexCenter();
-    fill: var(--tc);
+    color: var(--fc);
     &:hover {
         background: var(--fc);
         fill: var(--bgC);
@@ -1187,8 +1187,6 @@ I {
     width: auto;
     height: 100%;
     color: var(--tc);
-    margin-right: 3rem;
-
     &:hover {
         .bottom_bar,
         .top_bar,
@@ -1432,7 +1430,7 @@ I {
 .content {
     min-width: 250px;
     width: 1400px;
-    max-width: 90%;
+    max-width: 94%;
     padding: 4rem 0;
 }
 .btns_container {
@@ -1445,12 +1443,13 @@ I {
     margin-bottom: var(--lg);
 }
 .cards_container {
+    --gridSize: repeat(auto-fill, minmax(10rem, 1fr));
     position: relative;
     overflow: hidden;
     display: grid;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    grid-template-columns: var(--gridSize);
 }
 .grid_container {
     display: grid;
@@ -1992,7 +1991,7 @@ I {
     left: 0;
     right: 0;
     width: 100%;
-    padding: 1rem;
+    padding: 1rem 0;
     z-index: 5;
     transition: all 500ms ease;
     @include flexCenter();
@@ -2052,7 +2051,7 @@ I {
     right: 0;
     top: var(--top);
     bottom: var(--bottom);
-
+    padding: var(--lg);
     height: auto;
     width: 100%;
     transition: var(--t_f);
@@ -2061,7 +2060,7 @@ I {
     @include flexCenter();
     overflow: hidden;
     background: var(--bgC_t);
-
+    border-radius: var(--menuRadius);
     flex-direction: var(--menuDirection);
     opacity: 0;
     display: none;
@@ -2074,11 +2073,12 @@ I {
         width: 100%;
         @include flex(column, flex-start, center);
         padding: 0;
-        .phone_menu_btn {
-            height: var(--iconD);
-        }
     }
+    .phone_menu_btn {
+        height: var(--iconD);
 
+        border-radius: var(--lg);
+    }
     .extra_btns_container {
         @include flex(row, space-between, center);
         .btns_container {
@@ -2300,6 +2300,11 @@ I {
 }
 
 /*  */
+@media screen and (min-width: 457px) {
+    .cards_container {
+        --gridSize: repeat(auto-fill, minmax(12rem, 1fr));
+    }
+}
 @media screen and (min-width: 900px) {
     .flex_responsive {
         @include flex(row, center, flex-start);
@@ -2342,6 +2347,9 @@ I {
             display: flex;
         }
     }
+    .cards_container {
+        --gridSize: repeat(auto-fill, minmax(15rem, 1fr));
+    }
 }
 @media screen and (min-width: 1070px) {
     .flex_responsive {
@@ -2356,6 +2364,9 @@ I {
             display: none;
         }
     }
+    .cards_container {
+        --gridSize: repeat(auto-fill, minmax(17rem, 1fr));
+    }
 }
 /* @media screen and (min-width: 1185px) {
     
@@ -2367,6 +2378,9 @@ I {
         .service_card:nth-child(6) {
             grid-column: span 3;
         }
+    }
+    .cards_container {
+        --gridSize: repeat(auto-fill, minmax(20rem, 1fr));
     }
 }
 
