--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -125,9 +125,7 @@
 }
 
 //!THEMES START
-[color-scheme] {
-    --h: var(--fc);
-}
+
 [color-scheme="light"] {
     --fc: var(--logoPurpleL);
     --sc: var(--logoMintL);
@@ -152,7 +150,10 @@
     --vueIconText: rgb(204, 204, 204);
     color-scheme: dark;
 }
-
+[color-scheme] {
+    --h: var(--fc);
+    --backdropShadow: 2px 2px 2rem var(--shadow), -2px -2px 2rem var(--shadow);
+}
 *,
 *:after,
 *:before {
@@ -936,7 +937,7 @@ I {
     user-select: none;
     max-width: 250px;
     width: 100%;
-    box-shadow: 2px 2px 2rem var(--shadow), -2px -2px 2rem var(--shadow);
+    box-shadow: var(--backdropShadow);
     .header_bubble {
         height: 6rem;
         width: 100%;
@@ -1388,23 +1389,23 @@ I {
         background: var(--bgC_t);
         transform: translateY(100%);
         opacity: 0;
+        font-size: var(--fs_n);
         .title {
+            font-size: var(--fs_n);
             width: 100%;
-            text-align: center;
-            font-size: var(--fs_l);
             color: var(--fc);
-            margin-bottom: var(--md);
+            margin-bottom: var(--xl);
             line-height: 1;
+            text-align: center;
         }
         .subtitle {
             width: 100%;
             text-align: center;
-            font-size: var(--fs_n);
         }
         .icons_project_container {
             @include flexCenter();
             flex-wrap: wrap;
-            gap: var(--sm);
+
             width: 100%;
             text-align: center;
             .tech_icon_card {
@@ -1616,6 +1617,27 @@ I {
     .btn {
         width: calc(100% - var(--lg));
         margin: var(--lg) VAR(--md);
+    }
+}
+.modal {
+    .window {
+        position: relative;
+        height: 100%;
+        .options_details {
+            font-size: var(--fs_n);
+            span {
+                display: block;
+            }
+        }
+        .portfolio_details {
+            position: absolute;
+            bottom: 3rem;
+            left: 0;
+            padding: var(--lg);
+            background: var(--bgC_t);
+            border-radius: 0 2rem 2rem 0;
+            box-shadow: var(--backdropShadow);
+        }
     }
 }
 .alert_modal {
