--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2028,7 +2028,7 @@ I {
     }
 
     .icon_container:not(.logo_btn) {
-        --cionSize: 3.5rem;
+        --iconSize: 3.5rem;
         fill: var(--tc);
     }
     .btn_active {
