portfolio fixed, change style

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1364,7 +1364,6 @@ I {
 .project_card .info_project_container .title {
   font-size: var(--fs_n);
   width: 100%;
-  color: var(--fc);
   margin-bottom: var(--xl);
   line-height: 1;
   text-align: center;
@@ -1418,7 +1417,7 @@ I {
 }
 
 .cards_container {
-  --gridSize: repeat(auto-fill, minmax(10rem, 1fr));
+  --gridSize: repeat(auto-fill, minmax(20rem, 1fr));
   position: relative;
   overflow: hidden;
   display: grid;
@@ -1628,24 +1627,11 @@ I {
   margin: var(--lg) VAR(--md);
 }
 
-.modal .window {
-  position: relative;
-  height: 100%;
-}
-.modal .window .options_details {
-  font-size: var(--fs_n);
-}
-.modal .window .options_details span {
-  display: block;
-}
-.modal .window .portfolio_details {
-  position: absolute;
-  bottom: 3rem;
-  left: 0;
+.portfolio_details {
   padding: var(--lg);
-  background: var(--bgC_t);
-  border-radius: 0 2rem 2rem 0;
-  box-shadow: var(--backdropShadow);
+}
+.portfolio_details .options_details {
+  font-size: var(--fs_n);
 }
 
 .alert_modal .modal_info {
@@ -2412,11 +2398,11 @@ I {
 }
 
 /*  */
-@media screen and (min-width: 457px) {
-  .cards_container {
-    --gridSize: repeat(auto-fill, minmax(12rem, 1fr));
-  }
-}
+/* @media screen and (min-width: 457px) {
+    .cards_container {
+        --gridSize: repeat(auto-fill, minmax(12rem, 1fr));
+    }
+} */
 @media screen and (min-width: 900px) {
   .flex_responsive {
     display: flex;
@@ -2454,9 +2440,9 @@ I {
   .nav_btn .icon_btn {
     display: flex;
   }
-  .cards_container {
-    --gridSize: repeat(auto-fill, minmax(15rem, 1fr));
-  }
+  /*    .cards_container {
+      --gridSize: repeat(auto-fill, minmax(15rem, 1fr));
+  } */
 }
 @media screen and (min-width: 1070px) {
   .flex_responsive {
@@ -2468,9 +2454,9 @@ I {
   .nav_btn .icon_btn {
     display: none;
   }
-  .cards_container {
-    --gridSize: repeat(auto-fill, minmax(17rem, 1fr));
-  }
+  /*   .cards_container {
+      --gridSize: repeat(auto-fill, minmax(17rem, 1fr));
+  } */
 }
 /* @media screen and (min-width: 1185px) {
 
@@ -2481,9 +2467,9 @@ I {
   .cards_service_container .service_card:nth-child(6) {
     grid-column: span 3;
   }
-  .cards_container {
-    --gridSize: repeat(auto-fill, minmax(20rem, 1fr));
-  }
+  /* .cards_container {
+      --gridSize: repeat(auto-fill, minmax(20rem, 1fr));
+  } */
 }
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
