general style, active section btn function ready

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,6 +71,8 @@
   --logoMintD: hsl(190, 100%, 40%);
   --purpleDark: hsl(260, 84%, 10%);
   --mintLigth: hsl(190, 100%, 50%);
+  --logoMintD_off: hsl(190, 100%, 30%);
+  --logoPurpleL_off: hsl(260, 84%, 15%);
   --sm: 0.25rem;
   --md: 0.5rem;
   --lg: 1rem;
@@ -100,6 +102,7 @@
 
 [color-scheme=light] {
   --fc: var(--logoPurpleL);
+  --fc_off: var(--logoPurpleL_off);
   --sc: var(--logoMintL);
   --tc: var(--black);
   --bgC: var(--white);
@@ -112,6 +115,7 @@
 
 [color-scheme=dark] {
   --fc: var(--logoMintD);
+  --fc_off: var(--logoMintD_off);
   --sc: var(--logoPurpleD);
   --tc: var(--white);
   --bgC: var(--black);
@@ -123,7 +127,7 @@
 }
 
 [color-scheme] {
-  --h: var(--fc);
+  --h: var(--fc_off);
   --backdropShadow: 2px 2px 2rem var(--shadow), -2px -2px 2rem var(--shadow);
 }
 
@@ -149,6 +153,7 @@ BODY {
   --good: var(--greenTeal);
   --bgGood: var(--bgGreenTeal);
   --btnGradient: linear-gradient(45deg, var(--fc), var(--sc));
+  --btnReverseGradient: linear-gradient(45deg, var(--sc), var(--fc));
   --shadow: var(--blackST);
   color: var(--tc);
   width: 100%;
@@ -954,27 +959,25 @@ I {
   min-height: var(--iconD);
   width: 100%;
   color: var(--bgC);
-  outline: solid 2px var(--fc);
   border-radius: var(--xl);
   text-align: center;
   padding: var(--lg) var(--md);
+  background: var(--btnGradient);
+  outline-color: transparent;
   cursor: pointer;
   transition: var(--t_f);
 }
 .btn .label_btn {
   transition: var(--t_f);
-  color: var(--tc);
+  color: var(--whiteOff);
   font-weight: var(--fw_b);
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
 }
 .btn:hover, .btn:active, .btn:focus {
-  background: var(--btnGradient);
-  outline-color: transparent;
-}
-.btn:hover .label_btn, .btn:active .label_btn, .btn:focus .label_btn {
-  color: var(--whiteOff);
+  border: solid 2px var(--fc);
+  background: linear-gradient(var(--sc), var(--sc));
 }
 
 .btn_down {
@@ -1029,12 +1032,8 @@ I {
   height: 100%;
   width: auto;
 }
-.nav_btn:hover {
-  background: var(--h);
-  color: var(--bgC);
-}
 .nav_btn:hover .icon_container {
-  fill: var(--bgC) !important;
+  fill: var(--whiteOff) !important;
 }
 
 .extra_btn {
@@ -1077,7 +1076,6 @@ I {
 .phone_menu_btn {
   width: 100%;
   font-size: var(--fs_n);
-  color: var(--tc);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1085,12 +1083,10 @@ I {
 .phone_menu_btn .icon_container {
   fill: var(--fc);
 }
-.phone_menu_btn:hover .icon_container {
-  fill: var(--bgC);
-}
-.phone_menu_btn:hover:not(.extra_btn) {
-  background: var(--h);
-  color: var(--bgC);
+
+[section-action]:hover,
+.nav_btn:hover {
+  background: var(--h) !important;
 }
 
 .bar {
@@ -1461,6 +1457,10 @@ I {
   width: fit-content;
   font-size: var(--fs_l);
   color: var(--midGray);
+  transition: color 250ms ease-in-out;
+}
+.cards_presentation .portfolio_btn:active, .cards_presentation .portfolio_btn:hover {
+  color: var(--whiteOff);
 }
 
 .lists_container {
@@ -2156,6 +2156,9 @@ I {
   min-width: var(--iconD);
   font-size: var(--fs_l);
 }
+.phone_menu_controler .extra_btns_container .extra_btn:hover {
+  color: var(--bgC);
+}
 .phone_menu_controler .social_btns_container {
   display: flex;
   flex-direction: row;
@@ -2336,13 +2339,19 @@ I {
 [options-active],
 [modal-active] {
   transition: var(--t_f);
-  transition-delay: 100ms;
 }
 [hidden]::backdrop,
 [show]::backdrop,
 [options-active]::backdrop,
 [modal-active]::backdrop {
   transition: var(--t_f);
+}
+
+[show],
+[hidden],
+[options-active],
+[modal-active] {
+  transition-delay: 100ms;
 }
 
 [options-active] {
@@ -2384,12 +2393,16 @@ I {
   opacity: 0;
 }
 
-[btn-active] {
-  background: var(--firstColor);
+[btn-active=true] {
+  background: var(--fc) !important;
 }
 
 [btn-active=false] {
-  background: inherit;
+  background: inherit !important;
+}
+
+[show-transform] {
+  transition-delay: 250ms;
 }
 
 [show-transform=true] {
