--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1149,6 +1149,7 @@ I {
 [section-action]:hover,
 .nav_btn:hover {
     background: var(--h) !important;
+    color: var(--whiteOff);
 }
 .bar {
     position: absolute;
@@ -2309,6 +2310,7 @@ I {
 }
 [btn-active="true"] {
     background: var(--fc) !important;
+    color: var(--whiteOff);
 }
 [btn-active="false"] {
     background: inherit !important;
